index.css
/* Color Scheme - Major (Verdigris #43b3ae, Celadon #ACE1AF); Minor (Xanadu #738678, Viridian #40826d)*/

body{
    background-color: #63b189;
    display: flex;
    flex-direction: column;
    align-items: center;
}

div#header{
    background-color: #0F4645;
    width: 100vw;
    height: fit-content;
    margin-bottom: 5%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    color: white;
}

img.header_flags{
    border-style: solid;
    border-color: white;
    object-fit: contain;
    margin: 2%;
    width: 10vw;
    height: auto;
    border-radius: 5%;
}

div#ticket{
    display: flex;
    background-color: #0F4645;
    width: fit-content;
    max-width: 95vw;
}

h1#title{
    color: #ACE1AF;
}

div#grid{
    display: flex;
    flex-direction: column;
}

div.row{
    display: flex;
    flex-direction: row;
}

div.cell{
    background-color: #43b3ae;
    border-style: solid;
    border-width: 1vmin;
    border-color: #40826d;
    width: 10vw;
    max-height: 10vh;
    aspect-ratio: 3/2;
    margin: 1vh;
    display: flex;
    justify-content: flex-start;
    align-items: flex-end;
}

h3.cell_text{
    margin-bottom: 0%;
    font-size: 2vmin;
    color: #0F4645;
}

h4#price{
    margin-top: 5%;
    margin-bottom: 0%;
    width: 100%;
    text-align: start;
}

h2#subtitle{
    margin-top: 3vmin;
    margin-bottom: 3vmin;
}

div#instructions{
    margin-left: 2%;
    max-width: 30vw;
    font-size: 2.2vmin;
    color: cyan;
    display: flex;
    align-items: center;
    flex-direction: column;
}

div#winnings{
    color: #0F4645;
}

